# snake

./: .gitignore  README.md  flake.nix  snake.cabal
src/: Main.hs  Utils.hs
src/Game/: Display.hs  Engine.hs  State.hs  Utils.hs
