cabal-version: 2.4
name:          snake
version:       0.0
synopsis:      A snake game using Dunai
author:        Kiana Sheibani
license:       MIT
build-type:    Simple

executable snake
  hs-source-dirs: src
  main-is:        Main.hs
  default-language:   GHC2021
  default-extensions: Arrows
  build-depends: base,
                 mtl,
                 random,
                 dunai,
                 gloss
